# albumconf

./: .gitignore  Cargo.toml  README.md
src/: album.rs  cli.rs  main.rs  outcome.rs
