[package]
name = "albumconf"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
itertools = "0.14.0"
metaflac = "0.2.8"
natord = "1.0.9"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = { version = "1.1.2", features = ["serde"] }
